# hubify

./: .bumpversion.cfg  .gitignore  ejemplo.csv  pyproject.toml  read.py  readme.md  streamlit.py
.github/workflows/: pr.yml  release.yml
hubify/: __init__.py  heatmap.py  hubify.py  plot.py  seaborn.py  transformations.py  utils.py
tests/: test_continuous_week.py  test_hubify.py
