[tool.poetry]
name = "hubify"
version = "0.1.1"
description = "Create GitHub-like visualisations"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
homepage = "https://github.com/fferegrino/hubify"
repository = "https://github.com/fferegrino/hubify"
readme = "readme.md"

[tool.poetry.dependencies]
matplotlib = "^3.5.2"
python = "^3.8"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
